--- a/Backend/pokemonBack/pokemonBack/pokemonBack.csproj
+++ b/Backend/pokemonBack/pokemonBack/pokemonBack.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -21,7 +21,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\..\Entities\Entities.csproj" />
+    <ProjectReference Include="..\..\Pokemon.Services\Pokemon.Services.csproj" />
   </ItemGroup>
 
 </Project>
