XPC_Jugador realizado

--- a/Backend/pokemonBack/pokemonBack/appsettings.Development.json
+++ b/Backend/pokemonBack/pokemonBack/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionStrings": { "Default": "Server=HL-5CD1136RL6\\MSSQLSERVER02;Database=CARTASPOKEMON;Trusted_Connection=True;TrustServerCertificate=True;" },
+    "ConnectionStrings": { "Default": "Server=HL-5CD912C7C2\\MSSQLSERVER01;Database=CARTASPOKEMON;Trusted_Connection=True;TrustServerCertificate=True;" },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
