historial de combate, logica de combates

--- a/.gitignore
+++ b/.gitignore
@@ -444,3 +444,18 @@ testem.log
 .DS_Store
 Thumbs.db
 /Frontend/.angular/cache/19.2.12/pokemon
+Frontend/.angular/cache/19.2.12/pokemon/vite/deps_ssr/package.json
+Frontend/.angular/cache/19.2.12/pokemon/vite/deps_ssr/_metadata.json
+Frontend/.angular/cache/19.2.12/pokemon/vite/deps/package.json
+Frontend/.angular/cache/19.2.12/pokemon/vite/deps/@angular_router.js.map
+Frontend/.angular/cache/19.2.12/pokemon/vite/deps/@angular_router.js
+Frontend/.angular/cache/19.2.12/pokemon/vite/deps/@angular_platform-browser.js.map
+Frontend/.angular/cache/19.2.12/pokemon/vite/deps/@angular_platform-browser.js
+Frontend/.angular/cache/19.2.12/pokemon/vite/deps/@angular_forms.js.map
+Frontend/.angular/cache/19.2.12/pokemon/vite/deps/@angular_forms.js
+Frontend/.angular/cache/19.2.12/pokemon/vite/deps/@angular_core.js.map
+Frontend/.angular/cache/19.2.12/pokemon/vite/deps/@angular_core.js
+Frontend/.angular/cache/19.2.12/pokemon/vite/deps/@angular_common_http.js
+Frontend/.angular/cache/19.2.12/pokemon/vite/deps/@angular_common_http.js.map
+Frontend/.angular/cache/19.2.12/pokemon/vite/deps/_metadata.json
+Frontend/.angular/cache/19.2.12/pokemon/.tsbuildinfo
